[gd_scene format=3 uid="uid://bf01jl6xk7ctv"]

[ext_resource type="Script" uid="uid://2dmy1dtu1qd3" path="res://scripts/mask.gd" id="1_in0c2"]
[ext_resource type="PackedScene" uid="uid://b520atcw4xb6k" path="res://scenes/masks/mask_none.tscn" id="2_rv8xw"]
[ext_resource type="AudioStream" uid="uid://brdh3iyck2nsc" path="res://audio/sfx/shaman_cancel.ogg" id="3_0iq2y"]
[ext_resource type="AudioStream" uid="uid://b52vyuf20e3be" path="res://audio/sfx/shaman_hover.ogg" id="4_q5cp3"]
[ext_resource type="AudioStream" uid="uid://dm35nncrpx3bc" path="res://audio/sfx/shaman_select_1.ogg" id="5_khdy1"]
[ext_resource type="AudioStream" uid="uid://bjhd4fqapqts8" path="res://audio/sfx/shaman_select_2.ogg" id="6_13g8o"]
[ext_resource type="AudioStream" uid="uid://b63drqtnhuep7" path="res://audio/sfx/swap_shaman.ogg" id="7_h7770"]
[ext_resource type="AudioStream" uid="uid://t01bu3648jyb" path="res://audio/sfx/shaman_shake.ogg" id="8_p3q4p"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_in0c2"]
radius = 0.5527344
height = 1.8154297

[sub_resource type="AudioStreamRandomizer" id="AudioStreamRandomizer_ngpd7"]
random_pitch = 1.122462
streams_count = 2
stream_0/stream = ExtResource("5_khdy1")
stream_1/stream = ExtResource("6_13g8o")

[sub_resource type="AudioStreamRandomizer" id="AudioStreamRandomizer_q5cp3"]
random_pitch = 1.122462
streams_count = 1
stream_0/stream = ExtResource("7_h7770")

[sub_resource type="AudioStreamRandomizer" id="AudioStreamRandomizer_0iq2y"]
random_pitch = 1.1892071
streams_count = 1
stream_0/stream = ExtResource("8_p3q4p")

[sub_resource type="Animation" id="Animation_rv8xw"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ModelContainer:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0, 0, 0)]
}

[sub_resource type="Animation" id="Animation_xsism"]
resource_name = "click_wobble"
length = 1.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ModelContainer:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.19999999, 0.39999998, 0.6, 0.79999995, 1, 1.2),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1),
"update": 0,
"values": [Vector3(0, 0, 0), Vector3(0, 0, -0.2617994), Vector3(0, 0, 0.2617994), Vector3(0, 0, -0.17453292), Vector3(0, 0, 0.17453292), Vector3(0, 0, -0.08726646), Vector3(0, 0, 0)]
}

[sub_resource type="Animation" id="Animation_0d8jk"]
resource_name = "idle"
length = 10.0
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ModelContainer:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(3, 3.2, 3.4, 3.6, 3.8, 4, 4.2),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1),
"update": 0,
"values": [Vector3(0, 0, 0), Vector3(0, 0, -0.05235988), Vector3(0, 0, 0.05235988), Vector3(0, 0, -0.034906585), Vector3(0, 0, 0.034906585), Vector3(0, 0, -0.017453292), Vector3(0, 0, 0)]
}
tracks/1/type = "method"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(3),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"play_shake_audio"
}]
}

[sub_resource type="Animation" id="Animation_uscli"]
resource_name = "wobble"
length = 1.3
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ModelContainer:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.20000005, 0.4000001, 0.5999999, 0.79999995, 1, 1.1999998),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1),
"update": 0,
"values": [Vector3(0, 0, 0), Vector3(0, 0, -0.08726646), Vector3(0, 0, 0.08726646), Vector3(0, 0, -0.05235988), Vector3(0, 0, 0.05235988), Vector3(0, 0, -0.034906585), Vector3(0, 0, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_xsism"]
_data = {
&"RESET": SubResource("Animation_rv8xw"),
&"click_wobble": SubResource("Animation_xsism"),
&"idle": SubResource("Animation_0d8jk"),
&"wobble": SubResource("Animation_uscli")
}

[node name="Mask" type="Node3D" unique_id=1193392792]
script = ExtResource("1_in0c2")

[node name="Area3D" type="Area3D" parent="." unique_id=788325701]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -0.59819704)

[node name="CollisionShape3D" type="CollisionShape3D" parent="Area3D" unique_id=1098468972]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.076660156, 0)
shape = SubResource("CapsuleShape3D_in0c2")

[node name="ModelContainer" type="Node3D" parent="." unique_id=1609231757]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -0.8932487)

[node name="MaskNone" parent="ModelContainer" unique_id=1713705050 instance=ExtResource("2_rv8xw")]

[node name="AudioStreamPlayer3D" type="AudioStreamPlayer3D" parent="." unique_id=888498302]

[node name="CancelAudio" type="AudioStreamPlayer3D" parent="." unique_id=1686095683]
stream = ExtResource("3_0iq2y")

[node name="HoverAudio" type="AudioStreamPlayer3D" parent="." unique_id=1026265763]
stream = ExtResource("4_q5cp3")

[node name="SelectAudio" type="AudioStreamPlayer3D" parent="." unique_id=1955822443]
stream = SubResource("AudioStreamRandomizer_ngpd7")

[node name="SwapAudio" type="AudioStreamPlayer3D" parent="." unique_id=343108225]
stream = SubResource("AudioStreamRandomizer_q5cp3")

[node name="ShakeAudio" type="AudioStreamPlayer3D" parent="." unique_id=877027960]
stream = SubResource("AudioStreamRandomizer_0iq2y")
volume_db = -12.0

[node name="AnimationPlayer" type="AnimationPlayer" parent="." unique_id=791805540]
libraries/ = SubResource("AnimationLibrary_xsism")
autoplay = &"idle"
speed_scale = 2.0
